dunno what was changed

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h2 id="faith" class="bodyHead">Faith</h2>
             <p>At the young age of sixteen I began to follow Jesus Christ's way for my life,
               instead of trying to do life my way.  Now for the past twenty-four years of my life
-              I have pursued what it means continually change my ways to align with His ways.
+              I have pursued what it means to continually change my ways to align with His ways.
               These changes led me to attend Seminary and earn my Masters in Divinity.  I lived in Florida, Iowa, and now back in Wisconsin.
               I have served at small churches, medium churches and large churches.  I have invested into the lives of others to help
               them as they try and navigate life's diffculties.</p>
@@ -105,7 +105,7 @@
 
       <tr id="bio">
         <td>
-            <h2 id="bio" class="bodyHead">BIO</h2>
+            <h2 class="bodyHead">BIO</h2>
             <ul>
                 <li id="bioList">Age: 40</li>
                 <li id="bioList">Height: 6' 3"</li>
