--- a/index.html
+++ b/index.html
@@ -26,17 +26,19 @@
           <span class="icon-bar"></span>
       </button>
         <div class="hidden-md hidden-lg hidden-sm">
-          <img class="nav-brand headerLogo" src="images/logo.png" alt="Logo">
+          <img id="navlogo" class="nav-brand" src="images/logo.gif" alt="Logo">
           <a id="navTelephone" class="nav-brand textWhite pull-right" href="tel: 4144251510">(414) 425-1510</a>
         </div>
       </div>
       <div>
         <div class="collapse navbar-collapse" id="myNavbar">
           <ul class="nav navbar-nav">
+            <li><a class="textWhite" href="#">Home</a></li>
             <li><a class="textWhite" href="#section1">About Us</a></li>
             <li><a class="textWhite" href="#section2">Our Team</a></li>
             <li><a class="textWhite" href="#section3">Services Provided</a></li>
             <li><a class="textWhite" href="#section4">New Patient</a></li>
+            <li><a class="textWhite" href="retirement.html">Dr. Raimann Retirement</a></li>
           </ul>
         </div>
       </div>
@@ -46,7 +48,7 @@
   <div id="logoSection" class="container-fluid hidden-xs lightBlue text-center">
     <div class="row">
       <div class="col-sm-6">
-        <img id="logo" src="images/logo.png" alt="Logo">
+        <img id="logo" src="images/logo.gif" alt="Logo">
       </div>
       <div class="col-sm-1">
       </div>
@@ -215,7 +217,8 @@
             <div id="collapse1" class="panel-collapse collapse">
               <div class="panel-body">
                 <ul class="list-group">
-                  <li class="list-group-item">Fillings: Resin and Amalgam</li>
+                  <li class="list-group-item">Tooth Colored Fillings</li>
+                  <li class="list-group-item">Silver Fillings</li>
                   <li class="list-group-item">Bonding</li>
                   <li class="list-group-item">Veneers</li>
                 </ul>
@@ -246,8 +249,8 @@
             <div id="collapse3" class="panel-collapse collapse">
               <div class="panel-body">
                 <ul class="list-group">
-                  <li class="list-group-item">Restore or place the grown after an implant</li>
-                  <li class="list-group-item">implant supported dentures</li>
+                  <li class="list-group-item">Restore or place the crown after an implant</li>
+                  <li class="list-group-item">Implant supported dentures</li>
                 </ul>
               </div>
             </div>
@@ -300,9 +303,8 @@
                 <ul class="list-group">
                   <li class="list-group-item">Extractions</li>
                   <li class="list-group-item">Root Canal Therapy</li>
-                  <li class="list-group-item">EMERGENCY Dental Treatment</li>
+                  <li class="list-group-item">Emergency Dental Treatment</li>
                   <li class="list-group-item">Teeth Whitening</li>
-                  <li class="list-group-item">EMERGENCY Dental Treatment</li>
                 </ul>
               </div>
             </div>
