--- a/index.html
+++ b/index.html
@@ -80,22 +80,22 @@
     <h1 class="text-center">About Us</h1>
     <div class="row">
       <div class="col-xs-12 col-sm-4">
-        <button type="button" class="btn btn-info btn-lg infoButton" data-toggle="modal" data-target="#missionModal">Our Mission</button>
+        <button type="button" class="btn btn-info btn-lg infoButton grey" data-toggle="modal" data-target="#missionModal">Our Mission</button>
       </div>
       <div class="col-xs-12 col-sm-4">
-        <button type="button" class="btn btn-info btn-lg infoButton" data-toggle="modal" data-target="#standardModal">High Standards</button>
+        <button type="button" class="btn btn-info btn-lg infoButton grey" data-toggle="modal" data-target="#standardModal">High Standards</button>
       </div>
       <div class="col-xs-12 col-sm-4">
-        <button type="button" class="btn btn-info btn-lg infoButton" data-toggle="modal" data-target="#preventionModal">Prevention and Education</button>
+        <button type="button" class="btn btn-info btn-lg infoButton grey" data-toggle="modal" data-target="#preventionModal">Prevention and Education</button>
       </div>
       <div class="col-xs-12 col-sm-4">
-        <button type="button" class="btn btn-info btn-lg infoButton" data-toggle="modal" data-target="#safetyModal">Uncompromising Safety</button>
+        <button type="button" class="btn btn-info btn-lg infoButton grey" data-toggle="modal" data-target="#safetyModal">Uncompromising Safety</button>
       </div>
       <div class="col-xs-12 col-sm-4">
-        <button type="button" class="btn btn-info btn-lg infoButton" data-toggle="modal" data-target="#trainingModal">Training and Expertise</button>
+        <button type="button" class="btn btn-info btn-lg infoButton grey" data-toggle="modal" data-target="#trainingModal">Training and Expertise</button>
       </div>
       <div class="col-xs-12 col-sm-4">
-        <button type="button" class="btn btn-info btn-lg infoButton" data-toggle="modal" data-target="#positiveModal">Positive Experience</button>
+        <button type="button" class="btn btn-info btn-lg infoButton grey" data-toggle="modal" data-target="#positiveModal">Positive Experience</button>
       </div>
     </div>
   </div>
