--- a/index.html
+++ b/index.html
@@ -40,7 +40,21 @@
             <li><a class="textWhite" href="#section4">New Patient</a></li>
             <li><a class="textWhite" href="retirement.html">Dr. Raimann Retirement</a></li>
           </ul>
+          <div class="navbar-right hidden-xs">
+            <div class="row">
+              <div class="col-sm-3">
+                <a href="https://www.facebook.com/jason.peterson3" title="Facebook" target="_blank"><img class="socialMediaTag" src="images/fb.png" alt="Facebook"></a>
+              </div>
+              <div class="col-sm-3">
+                <a href="https://www.facebook.com/jason.peterson3" title="Google Plus" target="_blank"><img class="socialMediaTag" src="images/gp.png" alt="Google Plus"></a>
+              </div>
+              <div class="col-sm-3">
+                <a href="https://www.facebook.com/jason.peterson3" title="Yelp" target="_blank"><img class="socialMediaTag" src="images/yelp.png" alt="Yelp"></a>
+              </div>
+            </div>
+          </div>
         </div>
+
       </div>
     </div>
   </nav>
@@ -67,10 +81,16 @@
     </div>
   </div>
 
-  <div id="photoSection" class="container-fluid lightBlue">
+  <div class="container-fluid photoContainer lightBlue">
     <div class="row">
-      <div class="col-sm-12">
-        <img id="jumbotronPhoto" class="img-responsive" src="images/smiles.jpg" alt="Smiles">
+      <div class="col-sm-4 hidden-xs photoDiv">
+        <img class="img-responsive mainPhoto" src="images/kidsmiles.jpeg" alt="Smiles">
+      </div>
+      <div class="col-sm-4 photoDiv">
+        <img class="img-responsive mainPhoto" src="images/smiles.jpg" alt="Smiles">
+      </div>
+      <div class="col-sm-4 hidden-xs photoDiv">
+        <img class="img-responsive mainPhoto" src="images/oldersmiles.jpeg" alt="Smiles">
       </div>
     </div>
   </div>
@@ -102,21 +122,20 @@
   <div id="section2" class="container-fluid lightBlue">
     <h1 class="text-center">Our Team</h1>
     <div class="row">
-      <div class="col-xs-12 col-sm-6">
-        <img class="img-responsive drImage" src="images/drkatie.jpg" alt="Card image cap">
-      </div>
-      <div class="col-xs-12 col-sm-6">
-        <h3>Dr. Katie A. Satula</h3>
-        <p class="card-text">My family has been members of the Muskego community for seven generations. In fact, my grandparents Harold and Carol DeBack still farm in Muskego and my parents, siblings, and I are all graduates of Muskego High School. I attended Carthage College
-          in Kenosha, WI where I received my bachelor’s degree in Biology and Neuroscience. I have spent time volunteering in dental clinics in Nicaragua, Jamaica, and the local community. Therefore, I knew a career in dentistry would allow me to channel
-          my creative talents and passion to help others. I attended Marquette University School of Dentistry where I earned my Doctor of Dental Surgery degree. <br><br> As a general dentist, I pride myself in providing caring, comfortable, and comprehensive
-          dental care to all my patients. I enjoy treating patients as young as one, all the way to those who have experienced many decades of life, and everyone in between. My friendly approach to dentistry will ensure you and all of your family and
-          friends will receive the highest standard of care. <br><br> I strive to treat patients with the highest quality of dental care and ensure an environment where open communication is key, helping everyone to understand their oral conditions and
-          all possible treatment options. My mission is not to simply work ON patients, but to work WITH them to reach their individualized dental care and oral health goals. My staff and I will treat every patient in a caring, concerned, empathetic,
-          understanding, honest, and professional manner. <br><br> In my free time I enjoy planning my upcoming August wedding, spending time with family and friends, and cooking. In addition, I am an avid reader and enjoy cheering on all the great sports
-          teams we have in Wisconsin.</p>
+      <div class="col-sm-1"></div>
+      <div class="col-sm-10 grey">
+        <div class="row">
+        <div class="col-xs-12 col-sm-6">
+          <img class="drImage" src="images/drkatie.jpg" alt="Card image cap">
+        </div>
+        <div class="col-xs-12 col-sm-6">
+          <h3>Dr. Katie A. Satula</h3>
+          <p class="card-text">My family has been members of the Muskego community for seven generations. In fact, my grandparents Harold and Carol DeBack still farm in Muskego and my parents, siblings, and I are all graduates of Muskego High School. I attended Carthage College
+            in Kenosha, WI where I received my bachelor’s degree in Biology and Neuroscience. I have spent time volunteering in dental clinics in Nicaragua, Jamaica, and the local community. Therefore, I knew a career in dentistry would allow me to channel
+            my creative talents and passion to help others. I attended Marquette University School of Dentistry where I earned my Doctor of Dental Surgery degree.         </div>
       </div>
 
+      </div>
     </div>
     <div class="row">
       <div class="col-xs-12 col-sm-6 col-sm-push-6">
@@ -356,10 +375,6 @@
           <br>
           <p><span class="glyphicon glyphicon-envelope"></span> info@satulaandmueller.com</p>
           <br>
-        </div>
-        <div class="col-sm-12 col-md-4">
-          <h2>Social</h2>
-          <hr></hr>
           <div class="row">
             <div class="col-xs-1 col-sm-2">
               <a href="https://www.facebook.com/jason.peterson3" title="Facebook" target="_blank"><img class="socialMediaTag" src="images/fb.png" alt="Facebook"></a>
@@ -369,6 +384,18 @@
             </div>
             <div class="col-xs-1 col-sm-2">
               <a href="https://www.facebook.com/jason.peterson3" title="Yelp" target="_blank"><img class="socialMediaTag" src="images/yelp.png" alt="Yelp"></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-4">
+          <h2>Memberships</h2>
+          <hr></hr>
+          <div class="row">
+            <div class "col-12">
+              <a href="https://www.wda.org/" title="WDA Member" target="_blank"><img id="WDALogo" src="images/WDA-Logo-Member.jpg" alt="WDA member logo"></a>
+            </div>
+            <div class "col-12">
+              <a href="http://www.ada.org/en" title="ADA Member" target="_blank"><img id="ADALogo" src="images/ADA-Member-Logo.jpg" alt="ADA member logo"></a>
             </div>
           </div>
         </div>
