--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <span class="icon-bar"></span>
       </button>
         <div class="hidden-md hidden-lg hidden-sm">
-          <img id="navlogo" class="nav-brand" src="images/logo.gif" alt="Logo">
+          <img id="navlogo" class="nav-brand" src="images/logo_white.png" alt="Logo">
           <a id="navTelephone" class="nav-brand textWhite pull-right" href="tel: 4144251510">(414) 425-1510</a>
         </div>
       </div>
@@ -59,18 +59,18 @@
     </div>
   </nav>
 
-  <div id="logoSection" class="container-fluid hidden-xs lightBlue text-center">
+  <div id="logoSection" class="container-fluid hidden-xs primaryBackground text-center">
     <div class="row">
       <div class="col-sm-6">
-        <img id="logo" src="images/logo.gif" alt="Logo">
+        <img id="logo" src="images/logo.png" alt="Logo">
       </div>
       <div class="col-sm-1">
       </div>
       <div class="col-sm-4 contactInfo">
-        <a id="logoTelephone" class="textWhite" href="tel: 4144251510">(414) 425-1510</a>
+        <a id="logoTelephone" class="primaryText" href="tel: 4144251510">(414) 425-1510</a>
         <br><br>
         <p>
-          <a class="textWhite" href="https://www.google.com/maps/place/11801+W+Janesville+Rd,+Hales+Corners,+WI+53130/@42.936507,-88.0629847,17z/data=!3m1!4b1!4m5!3m4!1s0x88050e9020bd4953:0x5517e793fa913b8b!8m2!3d42.936507!4d-88.060796" target="_blank">
+          <a class="primaryText" href="https://www.google.com/maps/place/11801+W+Janesville+Rd,+Hales+Corners,+WI+53130/@42.936507,-88.0629847,17z/data=!3m1!4b1!4m5!3m4!1s0x88050e9020bd4953:0x5517e793fa913b8b!8m2!3d42.936507!4d-88.060796" target="_blank">
                 <span class="glyphicon glyphicon-map-marker"> </span>
                   11801 W Janesville Rd.
                 <br>
@@ -81,22 +81,22 @@
     </div>
   </div>
 
-  <div class="container-fluid photoContainer lightBlue">
+  <div class="container-fluid photoContainer primaryBackground">
     <div class="row">
       <div class="col-sm-4 hidden-xs photoDiv">
-        <img class="img-responsive mainPhoto" src="images/kidsmiles.jpeg" alt="Smiles">
+        <img class="img-responsive mainPhoto" src="images/boy_dental.jpg" alt="Smiles">
       </div>
       <div class="col-sm-4 photoDiv">
-        <img class="img-responsive mainPhoto" src="images/smiles.jpg" alt="Smiles">
+        <img class="img-responsive mainPhoto" src="images/dental_family.jpg" alt="Smiles">
       </div>
       <div class="col-sm-4 hidden-xs photoDiv">
-        <img class="img-responsive mainPhoto" src="images/oldersmiles.jpeg" alt="Smiles">
+        <img class="img-responsive mainPhoto" src="images/senior_couple_dental.jpg" alt="Smiles">
       </div>
     </div>
   </div>
 
 
-  <div id="section1" class="container-fluid lightBlue textWhite">
+  <div id="section1" class="container-fluid primaryBackground primaryText">
     <h1 class="text-center">About Us</h1>
     <div class="row">
       <div class="col-xs-12 col-sm-4">
@@ -119,40 +119,46 @@
       </div>
     </div>
   </div>
-  <div id="section2" class="container-fluid lightBlue">
-    <h1 class="text-center">Our Team</h1>
+  <div id="section2" class="container-fluid primaryBackground">
+    <h1 class="text-center primaryText">Our Team</h1>
     <div class="row">
-      <div class="col-sm-1"></div>
-      <div class="col-sm-10 grey">
+      <div class="col-sm-2"></div>
+      <div class="col-sm-9 grey">
         <div class="row">
-        <div class="col-xs-12 col-sm-6">
-          <img class="drImage" src="images/drkatie.jpg" alt="Card image cap">
+          <div class="col-xs-12 col-sm-4 center white">
+            <img class="drImage img-responsive" src="images/drkatie.jpg" alt="Card image cap">
+          </div>
+          <div class="col-xs-12 col-sm-8">
+            <h3>Dr. Katie A. Satula</h3>
+            <p class="card-text">Dr. Katie A. Satula has deep roots in the local community, graduated from Muskego High School and then attended Carthage College in Kenosha, receiving her bachelor’s degree in Biology and Neuroscience. While attending college she spent time
+              volunteering in dental clinics in Nicaragua, Jamaica, and the local community. Volunteer work confirmed her desire to pursue a career in dentistry, using her talents and passions to help others. Dr. Satula earned her Doctor of Dental Surgery
+              (D.D.S.) degree from Marquette University School of Dentistry.
+
+              <br><br> Beginning her career practicing dentistry in Greenfield, Dr. Satula recently purchased the practice of Dr. Thomas Raimann in June of 2017. Dr. Satula looks forward to continuing the tradition of high quality dental care Dr. Raimann
+              began over thirty years ago. Dr. Satula loves working with patients of all ages and prides herself on providing caring, comfortable, and comprehensive dental care to all of her patients.
+
+              <br><br> Dr. Satula enjoys spending her free time with her husband, Steve, and their friends and family. She also enjoys cooking, reading, and cheering on all of the great Wisconsin sports teams. </div>
         </div>
-        <div class="col-xs-12 col-sm-6">
-          <h3>Dr. Katie A. Satula</h3>
-          <p class="card-text">My family has been members of the Muskego community for seven generations. In fact, my grandparents Harold and Carol DeBack still farm in Muskego and my parents, siblings, and I are all graduates of Muskego High School. I attended Carthage College
-            in Kenosha, WI where I received my bachelor’s degree in Biology and Neuroscience. I have spent time volunteering in dental clinics in Nicaragua, Jamaica, and the local community. Therefore, I knew a career in dentistry would allow me to channel
-            my creative talents and passion to help others. I attended Marquette University School of Dentistry where I earned my Doctor of Dental Surgery degree.         </div>
-      </div>
 
       </div>
     </div>
     <div class="row">
-      <div class="col-xs-12 col-sm-6 col-sm-push-6">
+      <div class="col-sm-2"></div>
+      <div class="col-sm-9 grey border">
+    <div class="row">
+      <div class=" center col-xs-12 col-sm-4 col-md-push-8 col-xl-push-9 white ">
         <img class="img-responsive drImage" src="images/drrichard.jpg" alt="Card image cap">
       </div>
-      <div class="col-xs-12 col-sm-6 col-sm-pull-6">
+      <div class="col-xs-12 col-sm-8 col-sm-pull-4">
         <h3>Dr. Richard A. Mueller</h3>
         <p class="card-text">My family has been members of the Muskego community for seven generations. In fact, my grandparents Harold and Carol DeBack still farm in Muskego and my parents, siblings, and I are all graduates of Muskego High School. I attended Carthage College
           in Kenosha, WI where I received my bachelor’s degree in Biology and Neuroscience. I have spent time volunteering in dental clinics in Nicaragua, Jamaica, and the local community. Therefore, I knew a career in dentistry would allow me to channel
           my creative talents and passion to help others. I attended Marquette University School of Dentistry where I earned my Doctor of Dental Surgery degree. <br><br> As a general dentist, I pride myself in providing caring, comfortable, and comprehensive
           dental care to all my patients. I enjoy treating patients as young as one, all the way to those who have experienced many decades of life, and everyone in between. My friendly approach to dentistry will ensure you and all of your family and
-          friends will receive the highest standard of care. <br><br> I strive to treat patients with the highest quality of dental care and ensure an environment where open communication is key, helping everyone to understand their oral conditions and
-          all possible treatment options. My mission is not to simply work ON patients, but to work WITH them to reach their individualized dental care and oral health goals. My staff and I will treat every patient in a caring, concerned, empathetic,
-          understanding, honest, and professional manner. <br><br> In my free time I enjoy planning my upcoming August wedding, spending time with family and friends, and cooking. In addition, I am an avid reader and enjoy cheering on all the great sports
-          teams we have in Wisconsin.</p>
+          friends will receive the highest standard of care.  </p>
       </div>
-
+</div>
+</div>
     </div>
     <div class="row">
       <div class="col-xs-12 col-sm-3">
@@ -221,8 +227,8 @@
       </div>
     </div>
   </div>
-  <div id="section3" class="container-fluid lightBlue">
-    <h1 class="text-center">Services Provided</h1>
+  <div id="section3" class="container-fluid primaryBackground">
+    <h1 class="text-center primaryText">Services Provided</h1>
     <div class="row">
       <div class="col-sm-4"></div>
       <div class="col-sm-8">
@@ -332,14 +338,20 @@
       </div>
     </div>
   </div>
-  <div id="section4" class="container-fluid lightBlue">
-    <img id="jumbotronPhoto" class="img-responsive" src="images/welcome.png" alt="New Patient Welcome image">
+  <div id="section4" class="container-fluid primaryText primaryBackground">
+    <div class="row">
+      <div id="welcomeBanner" class="col-sm-4 hidden-xs bannerBackground"></div>
+      <div class="col-sm-8">
+        <img id="jumbotronPhoto" class="img-responsive " src="images/welcome.jpg" alt="New Patient Welcome image">
+      </div>
+
+    </div>
     <div class="row">
       <div class="col-sm-2"></div>
       <div class="col-xs-12 col-sm-4">
         <h3>Call to schedule now </h3>
         <hr>
-        <a class="textWhite" href="tel: 4144251510">(414) 425-1510</a>
+        <a class="primaryText" href="tel: 4144251510">(414) 425-1510</a>
         <br>
         <p>Emergency appointments available</p>
       </div>
