--- a/index.html
+++ b/index.html
@@ -125,11 +125,11 @@
       <div class="col-sm-2"></div>
       <div class="col-sm-9 grey">
         <div class="row">
-          <div class="col-xs-12 col-sm-4 center white">
+          <div class="col-xs-12 col-sm-4 center drBackground">
             <img class="drImage img-responsive" src="images/drkatie.jpg" alt="Card image cap">
           </div>
           <div class="col-xs-12 col-sm-8">
-            <h3>Dr. Katie A. Satula</h3>
+            <h3>Meet Dr. Katie A. Satula</h3>
             <p class="card-text">Dr. Katie A. Satula has deep roots in the local community, graduated from Muskego High School and then attended Carthage College in Kenosha, receiving her bachelor’s degree in Biology and Neuroscience. While attending college she spent time
               volunteering in dental clinics in Nicaragua, Jamaica, and the local community. Volunteer work confirmed her desire to pursue a career in dentistry, using her talents and passions to help others. Dr. Satula earned her Doctor of Dental Surgery
               (D.D.S.) degree from Marquette University School of Dentistry.
@@ -146,11 +146,11 @@
       <div class="col-sm-2"></div>
       <div class="col-sm-9 grey border">
     <div class="row">
-      <div class=" center col-xs-12 col-sm-4 col-md-push-8 col-xl-push-9 white ">
+      <div class=" center col-xs-12 col-sm-4 col-sm-push-8 col-xl-push-9 drBackground ">
         <img class="img-responsive drImage" src="images/drrichard.jpg" alt="Card image cap">
       </div>
       <div class="col-xs-12 col-sm-8 col-sm-pull-4">
-        <h3>Dr. Richard A. Mueller</h3>
+        <h3>Meet Dr. Richard A. Mueller</h3>
         <p class="card-text">My family has been members of the Muskego community for seven generations. In fact, my grandparents Harold and Carol DeBack still farm in Muskego and my parents, siblings, and I are all graduates of Muskego High School. I attended Carthage College
           in Kenosha, WI where I received my bachelor’s degree in Biology and Neuroscience. I have spent time volunteering in dental clinics in Nicaragua, Jamaica, and the local community. Therefore, I knew a career in dentistry would allow me to channel
           my creative talents and passion to help others. I attended Marquette University School of Dentistry where I earned my Doctor of Dental Surgery degree. <br><br> As a general dentist, I pride myself in providing caring, comfortable, and comprehensive
@@ -283,7 +283,7 @@
           <div class="panel brown accordionBox">
             <div class="panel-heading">
               <h4 class="panel-title">
-          <a data-toggle="collapse" data-parent="#accordion" href="#collapse4"><span><img class="toothIcon" src="images/prevent.png" alt="Restore Tooth"></span>  Prevenative</a>
+          <a data-toggle="collapse" data-parent="#accordion" href="#collapse4"><span><img class="toothIcon" src="images/prevent.png" alt="Restore Tooth"></span>  Preventative</a>
         </h4>
             </div>
             <div id="collapse4" class="panel-collapse collapse">
@@ -359,10 +359,9 @@
         <h3>Insurance and Financials</h3>
         <hr>
         <ul>
-          <li>Drs. Satula and Mueller accept several different types of dental insurance programs. We will be more than happy to submit all insurance forms to you and help you recover the most from your benefits. We will do everything we can to help you afford
-            the treatment you need and want.</li>
-          <li>Please give our office a call to confirm one of our doctors is in network with your insurance provider</li>
-          <li>Forms of payment accepted by the office are check, cash, or any major credit card.</li>
+          <li>Our doctors accept most major dental insurance programs. We will be more than happy to submit all insurance forms for you and help you recover the most from your benefits. We will do everything we can to help you afford the treatment you need and want.</li>
+          <li>Please give our office a call to confirm our doctors are in network with your insurance provider.</li>
+          <li>Forms of payment accepted by the office include check, cash, or any major credit card.</li>
         </ul>
       </div>
     </div>
@@ -451,7 +450,7 @@
         </div>
         <div class="modal-body">
           <p>Drs. Satula and Mueller believe in providing affordable dental care for the entire family. From child, to adolescents, to adults and seniors, we offer patients the opportunity to create a beautiful, healthy smile with customized, compassionate
-            dental care in a comfortable atmosphere. We dedicated to providing you beautiful, long last smiles through upholding our practice mission.</p>
+            dental care in a comfortable atmosphere. We are dedicated to providing you beautiful, long lasting smiles through upholding our practice mission.</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -509,7 +508,7 @@
           <h4 class="modal-title">Uncompromising Safety</h4>
         </div>
         <div class="modal-body">
-          <p>Infection control in our office is also very important to us.  To protect our patients and ourselves, we strictly maintain sterilization and cross contamination processes using standards recommended by the American Dental Association (ADA),
+          <p>Infection control in our office is also very important to us.  To protect our patients and our staff, we strictly maintain sterilization and cross contamination processes using standards recommended by the American Dental Association (ADA),
             the Occupational Safety and Health Administration (OSHA), and the Center for Disease Control (CDC).</p>
         </div>
         <div class="modal-footer">
