updates with pictures

--- a/index.html
+++ b/index.html
@@ -434,8 +434,8 @@
     </div>
   </div>
 
-  <div class="textWhite darkBlue">
-    <div class="container-fluid darkBlue text-center">
+  <div class="textWhite bottomBanner">
+    <div class="container-fluid bottomBanner text-center">
       <p> &copy Satula and Mueller D.D.S. Hales Corners, WI </p>
     </div>
   </div>
