--- a/retirement.html
+++ b/retirement.html
@@ -26,7 +26,7 @@
           <span class="icon-bar"></span>
       </button>
         <div class="hidden-md hidden-lg hidden-sm">
-          <img id="navlogo" class="nav-brand" src="images/logo.gif" alt="Logo">
+          <img id="navlogo" class="nav-brand" src="images/logo_white.png" alt="Logo">
           <a id="navTelephone" class="nav-brand textWhite pull-right" href="tel: 4144251510">(414) 425-1510</a>
         </div>
       </div>
@@ -40,23 +40,36 @@
             <li><a class="textWhite" href="index.html#section4">New Patient</a></li>
             <li><a class="textWhite" href="#">Dr. Raimann Retirement</a></li>
           </ul>
+          <div class="navbar-right hidden-xs">
+            <div class="row">
+              <div class="col-sm-3">
+                <a href="https://www.facebook.com/jason.peterson3" title="Facebook" target="_blank"><img class="socialMediaTag" src="images/fb.png" alt="Facebook"></a>
+              </div>
+              <div class="col-sm-3">
+                <a href="https://www.facebook.com/jason.peterson3" title="Google Plus" target="_blank"><img class="socialMediaTag" src="images/gp.png" alt="Google Plus"></a>
+              </div>
+              <div class="col-sm-3">
+                <a href="https://www.facebook.com/jason.peterson3" title="Yelp" target="_blank"><img class="socialMediaTag" src="images/yelp.png" alt="Yelp"></a>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
   </nav>
 
-  <div id="logoSection" class="container-fluid hidden-xs lightBlue text-center">
+  <div id="logoSection" class="container-fluid hidden-xs primaryBackground text-center">
     <div class="row">
       <div class="col-sm-6">
-        <img id="logo" src="images/logo.gif" alt="Logo">
+        <img id="logo" src="images/logo.png" alt="Logo">
       </div>
       <div class="col-sm-1">
       </div>
       <div class="col-sm-4 contactInfo">
-        <a id="logoTelephone" class="textWhite" href="tel: 4144251510">(414) 425-1510</a>
+        <a id="logoTelephone" class="primaryText" href="tel: 4144251510">(414) 425-1510</a>
         <br><br>
         <p>
-          <a class="textWhite" href="https://www.google.com/maps/place/11801+W+Janesville+Rd,+Hales+Corners,+WI+53130/@42.936507,-88.0629847,17z/data=!3m1!4b1!4m5!3m4!1s0x88050e9020bd4953:0x5517e793fa913b8b!8m2!3d42.936507!4d-88.060796" target="_blank">
+          <a class="primaryText" href="https://www.google.com/maps/place/11801+W+Janesville+Rd,+Hales+Corners,+WI+53130/@42.936507,-88.0629847,17z/data=!3m1!4b1!4m5!3m4!1s0x88050e9020bd4953:0x5517e793fa913b8b!8m2!3d42.936507!4d-88.060796" target="_blank">
                 <span class="glyphicon glyphicon-map-marker"> </span>
                   11801 W Janesville Rd.
                 <br>
@@ -67,32 +80,31 @@
     </div>
   </div>
 
-  <div id="photoSection" class="container-fluid lightBlue">
+  <div id="retirementPhotoSection" class="container-fluid primaryBackground ">
     <div class="row">
       <div class="col-sm-4">
         <img id="retirementPhoto" class="img-responsive" src="images/Katie_Tom.jpg" alt="Katie and Tom">
       </div>
-      <div id="retirementLetter" class="col-sm-8 textWhite">
-        <h2>A Message from Dr.Thomas Raimann</h2>
-        <p>It is with mixed feelings that I announce my decision to retire from private practice beginning June 1, 2017. I have decided to spend more time guiding future dentists at Marquette University School of Dentistry and helping my parents, Ed and
-          Ted. I would like to thank you for your trust and confidence in letting me serve as your dentist. Some of you have been with me over thirty years, going back to when my mom Ted was my only employee.
+      <div id="retirementLetter"  class="col-sm-7 primaryText">
+          <h2>A Message from Dr.Thomas Raimann</h2>
+          <p>It is with mixed feelings that I announce my decision to retire from private practice beginning June 1, 2017. I have decided to spend more time guiding future dentists at Marquette University School of Dentistry and helping my parents, Ed and
+            Ted. I would like to thank you for your trust and confidence in letting me serve as your dentist. Some of you have been with me over thirty years, going back to when my mom Ted was my only employee.
 
-          <br>
-          <br> Choosing a dentist to succeed me was a very important decision. I wanted to be certain that my patients continue to receive quality dental care, so I have selected Dr. Katie Satula (formerly Gast) to carry on my practice. A graduate of
-          Marquette University School of Dentistry, she is a skilled, caring dentist with the qualifications to continue the practice in a highly professional manner. Originally from Muskego, Dr. Satula has been practicing in Greenfield, and she will
-          tell you more about herself in a subsequent letter.
-          <br>
-          <br> My incredible staff of Amy, Kristi, MaryJo, Beth, and Angie will stay on and be there with Dr. Satula to continue to provide you with excellent dental care. Your dental records will continue to be maintained at the office. If you would
-          like to have your records transferred, please contact the office at (414) 425-1510.
-          <br>
-          <br> I invite you to an open house on Saturday, June 24, 2017 from 10am-1pm to introduce you to Dr. Satula and say farewell.
-          <br>
-          <br> Thank you again for your loyalty, confidence and friendship,
-        </p>
+            <br>
+            <br> Choosing a dentist to succeed me was a very important decision. I wanted to be certain that my patients continue to receive quality dental care, so I have selected Dr. Katie Satula (formerly Gast) to carry on my practice. A graduate of
+            Marquette University School of Dentistry, she is a skilled, caring dentist with the qualifications to continue the practice in a highly professional manner. Originally from Muskego, Dr. Satula has been practicing in Greenfield, and she will
+            tell you more about herself in a subsequent letter.
+            <br>
+            <br> My incredible staff of Amy, Kristi, MaryJo, Beth, and Angie will stay on and be there with Dr. Satula to continue to provide you with excellent dental care. Your dental records will continue to be maintained at the office. If you would
+            like to have your records transferred, please contact the office at (414) 425-1510.
+            <br>
+            <br> I invite you to an open house on Saturday, June 24, 2017 from 10am-1pm to introduce you to Dr. Satula and say farewell.
+            <br>
+            <br> Thank you again for your loyalty, confidence and friendship,
+          </p>
       </div>
     </div>
   </div>
-
 
   <div class="grey textWhite">
     <div class="container-fluid grey">
@@ -113,10 +125,6 @@
           <br>
           <p><span class="glyphicon glyphicon-envelope"></span> info@satulaandmueller.com</p>
           <br>
-        </div>
-        <div class="col-sm-12 col-md-4">
-          <h2>Social</h2>
-          <hr></hr>
           <div class="row">
             <div class="col-xs-1 col-sm-2">
               <a href="https://www.facebook.com/jason.peterson3" title="Facebook" target="_blank"><img class="socialMediaTag" src="images/fb.png" alt="Facebook"></a>
@@ -126,6 +134,18 @@
             </div>
             <div class="col-xs-1 col-sm-2">
               <a href="https://www.facebook.com/jason.peterson3" title="Yelp" target="_blank"><img class="socialMediaTag" src="images/yelp.png" alt="Yelp"></a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-12 col-md-4">
+          <h2>Memberships</h2>
+          <hr></hr>
+          <div class="row">
+            <div class "col-12">
+              <a href="https://www.wda.org/" title="WDA Member" target="_blank"><img id="WDALogo" src="images/WDA-Logo-Member.jpg" alt="WDA member logo"></a>
+            </div>
+            <div class "col-12">
+              <a href="http://www.ada.org/en" title="ADA Member" target="_blank"><img id="ADALogo" src="images/ADA-Member-Logo.jpg" alt="ADA member logo"></a>
             </div>
           </div>
         </div>
@@ -153,128 +173,12 @@
     </div>
   </div>
 
-  <div class="textWhite darkBlue">
-    <div class="container-fluid darkBlue text-center">
+  <div class="textWhite bottomBanner">
+    <div class="container-fluid bottomBanner text-center">
       <p> &copy Satula and Mueller D.D.S. Hales Corners, WI </p>
     </div>
   </div>
-  <!-- Modal -->
-  <div id="missionModal" class="modal fade" role="dialog">
-    <div class="modal-dialog">
-      <!-- Modal content-->
-      <div class="modal-content darkBlue textWhite">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Our Mission</h4>
-        </div>
-        <div class="modal-body">
-          <p>Drs. Satula and Mueller believe in providing affordable dental care for the entire family. From child, to adolescents, to adults and seniors, we offer patients the opportunity to create a beautiful, healthy smile with customized, compassionate
-            dental care in a comfortable atmosphere. We dedicated to providing you beautiful, long last smiles through upholding our practice mission.</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
-      </div>
-    </div>
-  </div>
 
-  <div id="standardModal" class="modal fade" role="dialog">
-    <div class="modal-dialog">
-      <!-- Modal content-->
-      <div class="modal-content darkBlue textWhite">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">High Standards</h4>
-        </div>
-        <div class="modal-body">
-          <p>A standard of excellence in personalized dental care enables us to provide the quality dental services our patients deserve.  We provide comprehensive treatment planning and the latest treatment options to achieve your optimal dental health.
-            Should a dental emergency occur, we make every effort to see and care for you as soon as possible.</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div id="preventionModal" class="modal fade" role="dialog">
-    <div class="modal-dialog">
-      <!-- Modal content-->
-      <div class="modal-content darkBlue textWhite">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Prevention and Education</h4>
-        </div>
-        <div class="modal-body">
-          <p>As a practice, we are true believers that preventative care and education are the keys to a lifetime of optimal dental health. That is why we focus on thorough exams – checking the overall health of your teeth and gums, performing oral cancer
-            exams, and taking x- rays when necessary.  We also know that routine cleanings, flossing, sealants, and fluoride are all helpful in preventing dental disease.  Not only are we focused on the beauty of your smile, we’re also concerned about
-            your health.  A review of your medical history can help us stay informed of your overall health, any new medications, and any illnesses that may impact your dental health. In addition, at each cleaning appointment our hygienist go into detail
-            to make sure you are properly education to continue good oral habits at home. We are also dedicated to ensuring you understand the condition of your oral health and the treatment plan options available to you for optimal dental health.</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div id="safetyModal" class="modal fade" role="dialog">
-    <div class="modal-dialog">
-      <!-- Modal content-->
-      <div class="modal-content darkBlue textWhite">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Uncompromising Safety</h4>
-        </div>
-        <div class="modal-body">
-          <p>Infection control in our office is also very important to us.  To protect our patients and ourselves, we strictly maintain sterilization and cross contamination processes using standards recommended by the American Dental Association (ADA),
-            the Occupational Safety and Health Administration (OSHA), and the Center for Disease Control (CDC).</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div id="trainingModal" class="modal fade" role="dialog">
-    <div class="modal-dialog">
-      <!-- Modal content-->
-      <div class="modal-content darkBlue textWhite">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Training and Expertise</h4>
-        </div>
-        <div class="modal-body">
-          <p>As your dental health professionals, we want you to be confident knowing that we are a team of highly trained and skilled clinicians.  We pride ourselves in providing the care you need to keep your smile healthy.  To give you the best possible
-            service and results, we are committed to continual education and learning.  We attend dental lectures, meetings, and dental conventions to stay informed of new techniques, the latest products, and the newest equipment that a modern dental
-            office can utilize to provide state-of- the-art dental care.  Also, being members of various professional dental associations helps us to stay up to date of the changes and recommendations for our profession.</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <div id="positiveModal" class="modal fade" role="dialog">
-    <div class="modal-dialog">
-      <!-- Modal content-->
-      <div class="modal-content darkBlue textWhite">
-        <div class="modal-header">
-          <button type="button" class="close" data-dismiss="modal">&times;</button>
-          <h4 class="modal-title">Positive Experience</h4>
-        </div>
-        <div class="modal-body">
-          <p>Building a foundation of trust by treating our patients as special individuals is vital to our success.  We understand how uneasy some patients may feel about their dental visits, and how we can make a difference in providing a relaxing and
-            positive experience.  Our entire team is dedicated to providing you with excellent, personalized care and service to make your visits as comfortable and pleasant as possible.</p>
-        </div>
-        <div class="modal-footer">
-          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        </div>
-      </div>
-    </div>
-  </div>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
