Changes from Katie

--- a/retirement.html
+++ b/retirement.html
@@ -92,15 +92,11 @@
 
             <br>
             <br> Choosing a dentist to succeed me was a very important decision. I wanted to be certain that my patients continue to receive quality dental care, so I have selected Dr. Katie Satula (formerly Gast) to carry on my practice. A graduate of
-            Marquette University School of Dentistry, she is a skilled, caring dentist with the qualifications to continue the practice in a highly professional manner. Originally from Muskego, Dr. Satula has been practicing in Greenfield, and she will
-            tell you more about herself in a subsequent letter.
+            Marquette University School of Dentistry, she is a skilled, caring dentist with the qualifications to continue the practice in a highly professional manner. Originally from Muskego, Dr. Satula has been practicing in Greenfield.
             <br>
-            <br> My incredible staff of Amy, Kristi, MaryJo, Beth, and Angie will stay on and be there with Dr. Satula to continue to provide you with excellent dental care. Your dental records will continue to be maintained at the office. If you would
-            like to have your records transferred, please contact the office at (414) 425-1510.
+            <br> My incredible staff of Amy, Kristi, MaryJo, Beth, and Angie will stay on and be there with Dr. Satula to continue to provide you with excellent dental care. Your dental records will continue to be maintained at the office.
             <br>
-            <br> I invite you to an open house on Saturday, June 24, 2017 from 10am-1pm to introduce you to Dr. Satula and say farewell.
-            <br>
-            <br> Thank you again for your loyalty, confidence and friendship,
+            <br> Thank you again for your loyalty, confidence and friendship.
           </p>
       </div>
     </div>
@@ -142,7 +138,7 @@
           <hr></hr>
           <div class="row">
             <div class "col-12">
-              <a href="https://www.wda.org/" title="WDA Member" target="_blank"><img id="WDALogo" src="images/WDA-Logo-Member.jpg" alt="WDA member logo"></a>
+              <a href="https://www.wda.org/" title="WDA Member" target="_blank"><img id="WDALogo" src="images/WDA-Logo-web.png" alt="WDA member logo"></a>
             </div>
             <div class "col-12">
               <a href="http://www.ada.org/en" title="ADA Member" target="_blank"><img id="ADALogo" src="images/ADA-Member-Logo.jpg" alt="ADA member logo"></a>
