--- a/index.html
+++ b/index.html
@@ -160,12 +160,12 @@
 </div>
 </div>
     </div>
-    <div class="row">
+    <div class="row text-center">
       <div class="col-xs-12 col-sm-3">
         <div class="staffContainer">
           <img src="images/person1.jpg" alt="Staff Picture" class="staffImage" style="width:100%">
           <div class="staffMiddle">
-            <div class="staffName">Kris</div>
+            <div class="staffName">Amy<br>Patient Care</div>
           </div>
         </div>
       </div>
@@ -173,7 +173,7 @@
         <div class="staffContainer">
           <img src="images/person2.jpg" alt="Staff Picture" class="staffImage" style="width:100%">
           <div class="staffMiddle">
-            <div class="staffName">Mary Jo</div>
+            <div class="staffName">Kristi<br>Dental Assistant</div>
           </div>
         </div>
       </div>
@@ -181,7 +181,7 @@
         <div class="staffContainer">
           <img src="images/person3.jpg" alt="Staff Picture" class="staffImage" style="width:100%">
           <div class="staffMiddle">
-            <div class="staffName">Angie</div>
+            <div class="staffName">Angie<br>Dental Hygienist</div>
           </div>
         </div>
       </div>
@@ -189,7 +189,7 @@
         <div class="staffContainer">
           <img src="images/person4.jpg" alt="Staff Picture" class="staffImage" style="width:100%">
           <div class="staffMiddle">
-            <div class="staffName">Beth</div>
+            <div class="staffName">Kim<br>Patient Care</div>
           </div>
         </div>
       </div>
@@ -197,7 +197,7 @@
         <div class="staffContainer">
           <img src="images/person5.jpg" alt="Staff Picture" class="staffImage" style="width:100%">
           <div class="staffMiddle">
-            <div class="staffName">Sue</div>
+            <div class="staffName">Beth<br>Dental Hygienist</div>
           </div>
         </div>
       </div>
@@ -205,7 +205,7 @@
         <div class="staffContainer">
           <img src="images/person6.jpg" alt="Staff Picture" class="staffImage" style="width:100%">
           <div class="staffMiddle">
-            <div class="staffName">Kristi</div>
+            <div class="staffName">Gloria<br>Dental Assistant</div>
           </div>
         </div>
       </div>
@@ -213,7 +213,7 @@
         <div class="staffContainer">
           <img src="images/person7.jpg" alt="Staff Picture" class="staffImage" style="width:100%">
           <div class="staffMiddle">
-            <div class="staffName">Kim</div>
+            <div class="staffName">Mary Jo<br>Dental Hygienist</div>
           </div>
         </div>
       </div>
@@ -221,7 +221,7 @@
         <div class="staffContainer">
           <img src="images/person8.jpg" alt="Staff Picture" class="staffImage" style="width:100%">
           <div class="staffMiddle">
-            <div class="staffName">Amy</div>
+            <div class="staffName">Chris<br>Dental Hygienist</div>
           </div>
         </div>
       </div>
@@ -403,7 +403,7 @@
           <hr></hr>
           <div class="row">
             <div class "col-12">
-              <a href="https://www.wda.org/" title="WDA Member" target="_blank"><img id="WDALogo" src="images/WDA-Logo-Member.jpg" alt="WDA member logo"></a>
+              <a href="https://www.wda.org/" title="WDA Member" target="_blank"><img id="WDALogo" src="images/WDA-Logo-web.png" alt="WDA member logo"></a>
             </div>
             <div class "col-12">
               <a href="http://www.ada.org/en" title="ADA Member" target="_blank"><img id="ADALogo" src="images/ADA-Member-Logo.jpg" alt="ADA member logo"></a>
