final adjustments minus social links

--- a/index.html
+++ b/index.html
@@ -37,19 +37,19 @@
             <li><a class="textWhite" href="#section1">About Us</a></li>
             <li><a class="textWhite" href="#section2">Our Team</a></li>
             <li><a class="textWhite" href="#section3">Services Provided</a></li>
-            <li><a class="textWhite" href="#section4">New Patient</a></li>
+            <li><a class="textWhite" href="#section4">New Patients</a></li>
             <li><a class="textWhite" href="retirement.html">Dr. Raimann Retirement</a></li>
           </ul>
           <div class="navbar-right hidden-xs">
             <div class="row">
               <div class="col-sm-3">
-                <a href="https://www.facebook.com/jason.peterson3" title="Facebook" target="_blank"><img class="socialMediaTag" src="images/fb.png" alt="Facebook"></a>
+                <a href="https://www.facebook.com/drsatula" title="Facebook" target="_blank"><img class="socialMediaTag" src="images/fb.png" alt="Facebook"></a>
               </div>
               <div class="col-sm-3">
-                <a href="https://www.facebook.com/jason.peterson3" title="Google Plus" target="_blank"><img class="socialMediaTag" src="images/gp.png" alt="Google Plus"></a>
+                <a href="#" title="Google Plus" ><img class="socialMediaTag" src="images/gp.png" alt="Google Plus"></a>
               </div>
               <div class="col-sm-3">
-                <a href="https://www.facebook.com/jason.peterson3" title="Yelp" target="_blank"><img class="socialMediaTag" src="images/yelp.png" alt="Yelp"></a>
+                <a href="#" title="Yelp" ><img class="socialMediaTag" src="images/yelp.png" alt="Yelp"></a>
               </div>
             </div>
           </div>
@@ -125,19 +125,16 @@
       <div class="col-sm-2"></div>
       <div class="col-sm-9 grey">
         <div class="row">
-          <div class="col-xs-12 col-sm-4 center drBackground">
-            <img class="drImage img-responsive" src="images/drkatie.jpg" alt="Card image cap">
+          <div id="satulaImg" class="col-xs-12 col-sm-4 drBackground move-left">
+            <img class="img-responsive" src="images/drkatie.jpg" alt="Card image cap">
           </div>
           <div class="col-xs-12 col-sm-8">
             <h3>Meet Dr. Katie A. Satula</h3>
-            <p class="card-text">Dr. Katie A. Satula has deep roots in the local community, graduated from Muskego High School and then attended Carthage College in Kenosha, receiving her bachelor’s degree in Biology and Neuroscience. While attending college she spent time
-              volunteering in dental clinics in Nicaragua, Jamaica, and the local community. Volunteer work confirmed her desire to pursue a career in dentistry, using her talents and passions to help others. Dr. Satula earned her Doctor of Dental Surgery
-              (D.D.S.) degree from Marquette University School of Dentistry.
+            <p class="card-text">Dr. Katie A. Satula has deep roots in the local community. She graduated from Muskego High School, then attended Carthage College in Kenosha, earning bachelor’s degrees in biology and neuroscience. While attending college, she volunteered in dental clinics in Nicaragua, Jamaica, and the local community. That volunteer work confirmed her desire to pursue a career in dentistry, using her talents and passions to help others. Dr. Satula earned her Doctor of Dental Surgery (D.D.S.) degree from the Marquette University School of Dentistry.
 
-              <br><br> Beginning her career practicing dentistry in Greenfield, Dr. Satula recently purchased the practice of Dr. Thomas Raimann in June of 2017. Dr. Satula looks forward to continuing the tradition of high quality dental care Dr. Raimann
-              began over thirty years ago. Dr. Satula loves working with patients of all ages and prides herself on providing caring, comfortable, and comprehensive dental care to all of her patients.
+              <br><br> Dr. Satula began her career practicing dentistry in Greenfield and recently purchased the practice of Dr. Thomas Raimann in June 2017. She looks forward to continuing the tradition of high-quality dental care that Dr. Raimann began over 30 years ago. Dr. Satula loves working with patients of all ages and prides herself on providing caring, comfortable, and comprehensive dental care to all of her patients.
 
-              <br><br> Dr. Satula enjoys spending her free time with her husband, Steve, and their friends and family. She also enjoys cooking, reading, and cheering on all of the great Wisconsin sports teams. </div>
+              <br><br> Dr. Satula enjoys spending free time with her husband, Steve, and their friends and family. She also enjoys cooking, reading, and cheering on all of the great Wisconsin sports teams. </div>
         </div>
 
       </div>
@@ -146,22 +143,24 @@
       <div class="col-sm-2"></div>
       <div class="col-sm-9 grey border">
     <div class="row">
-      <div class=" center col-xs-12 col-sm-4 col-sm-push-8 col-xl-push-9 drBackground ">
-        <img class="img-responsive drImage" src="images/drrichard.jpg" alt="Card image cap">
+      <div  id="muellerImg" class="col-xs-12 col-sm-4 col-sm-push-8 col-xl-push-9 drBackground ">
+        <img  class="img-responsive move-right" src="images/drrichard.jpg" alt="Card image cap">
       </div>
       <div class="col-xs-12 col-sm-8 col-sm-pull-4">
         <h3>Meet Dr. Richard A. Mueller</h3>
-        <p class="card-text">My family has been members of the Muskego community for seven generations. In fact, my grandparents Harold and Carol DeBack still farm in Muskego and my parents, siblings, and I are all graduates of Muskego High School. I attended Carthage College
-          in Kenosha, WI where I received my bachelor’s degree in Biology and Neuroscience. I have spent time volunteering in dental clinics in Nicaragua, Jamaica, and the local community. Therefore, I knew a career in dentistry would allow me to channel
-          my creative talents and passion to help others. I attended Marquette University School of Dentistry where I earned my Doctor of Dental Surgery degree. <br><br> As a general dentist, I pride myself in providing caring, comfortable, and comprehensive
-          dental care to all my patients. I enjoy treating patients as young as one, all the way to those who have experienced many decades of life, and everyone in between. My friendly approach to dentistry will ensure you and all of your family and
-          friends will receive the highest standard of care.  </p>
+        <p class="card-text">In private practice for over 35 years, Dr. Richard A. Mueller is a seasoned dentist committed to offering the highest level of patient care. With both an undergraduate degree in biology and his Doctor of Dental Surgery (D.D.S.) from Marquette University, Dr. Mueller continues to give back to his alma mater through the Marquette School of Dentistry’s mentor program.
+
+          <br><br> Dr. Mueller’s contributions to the dental profession have earned him distinguished honors, including fellowships in the Pierre Fauchard Academy, the American College of Dentistry, and the International College of Dentistry.
+He has held leadership positions with both the Wisconsin Dental Association (WDA) and locally with the Greater Milwaukee Dental Association. He also is a member of the American Dental Association. His commitment to serving the community is shown in volunteering his time and talents to events with the WDA’s Mission of Mercy Dental Outreach (MOM’s), Give Kids a Smile, and local Head Start screenings.
+<br>
+<br>
+Born and raised in the Milwaukee area and a resident of Hales Corners for 29 years, Dr. Mueller welcomes new patients to join his long-standing promise to offer exceptional patient care. In his free time, Dr. Mueller enjoys making memories with his family, including two grown children and a grandchild. </p>
       </div>
 </div>
 </div>
     </div>
     <div class="row text-center">
-      <div class="col-xs-12 col-sm-3">
+      <div class="col-xs-12 col-sm-4">
         <div class="staffContainer">
           <img src="images/person1.jpg" alt="Staff Picture" class="staffImage" style="width:100%">
           <div class="staffMiddle">
@@ -169,7 +168,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-3">
+      <div class="col-xs-12 col-sm-4">
         <div class="staffContainer">
           <img src="images/person2.jpg" alt="Staff Picture" class="staffImage" style="width:100%">
           <div class="staffMiddle">
@@ -177,7 +176,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-3">
+      <div class="col-xs-12 col-sm-4">
         <div class="staffContainer">
           <img src="images/person3.jpg" alt="Staff Picture" class="staffImage" style="width:100%">
           <div class="staffMiddle">
@@ -185,7 +184,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-3">
+      <div class="col-xs-12 col-sm-4">
         <div class="staffContainer">
           <img src="images/person4.jpg" alt="Staff Picture" class="staffImage" style="width:100%">
           <div class="staffMiddle">
@@ -193,7 +192,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-3">
+      <div class="col-xs-12 col-sm-4">
         <div class="staffContainer">
           <img src="images/person5.jpg" alt="Staff Picture" class="staffImage" style="width:100%">
           <div class="staffMiddle">
@@ -201,7 +200,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-3">
+      <div class="col-xs-12 col-sm-4">
         <div class="staffContainer">
           <img src="images/person6.jpg" alt="Staff Picture" class="staffImage" style="width:100%">
           <div class="staffMiddle">
@@ -209,7 +208,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-3">
+      <div class="col-xs-12 col-sm-4">
         <div class="staffContainer">
           <img src="images/person7.jpg" alt="Staff Picture" class="staffImage" style="width:100%">
           <div class="staffMiddle">
@@ -217,7 +216,15 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-12 col-sm-3">
+      <div class="col-xs-12 col-sm-4">
+        <div class="staffContainer">
+          <img src="images/Sue_Klan.jpg" alt="Staff Picture" class="staffImage" style="width:100%">
+          <div class="staffMiddle">
+            <div class="staffName">Sue<br>Dental Assistant</div>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-12 col-sm-4">
         <div class="staffContainer">
           <img src="images/person8.jpg" alt="Staff Picture" class="staffImage" style="width:100%">
           <div class="staffMiddle">
@@ -338,14 +345,20 @@
       </div>
     </div>
   </div>
-  <div id="section4" class="container-fluid primaryText primaryBackground">
-    <div class="row">
-      <div id="welcomeBanner" class="col-sm-4 hidden-xs bannerBackground"></div>
-      <div class="col-sm-8">
-        <img id="jumbotronPhoto" class="img-responsive " src="images/welcome.jpg" alt="New Patient Welcome image">
-      </div>
 
+  <div id="section4" class="container-fluid photoContainer primaryBackground primaryText">
+    <div class="row">
+      <div class="col-sm-3 hidden-xs photoDiv">
+      </div>
+      <div class="col-sm-4 photoDiv">
+        <img class="img-responsive mainPhoto" src="images/Couple_only.png" alt="Smiles">
+      </div>
+      <div class="col-sm-4 hidden-xs photoDiv">
+        <img class="img-responsive mainPhoto" src="images/NewPatientsWelcome.jpg" alt="Smiles">
+      </div>
     </div>
+
+
     <div class="row">
       <div class="col-sm-2"></div>
       <div class="col-xs-12 col-sm-4">
@@ -388,13 +401,13 @@
           <br>
           <div class="row">
             <div class="col-xs-1 col-sm-2">
-              <a href="https://www.facebook.com/jason.peterson3" title="Facebook" target="_blank"><img class="socialMediaTag" src="images/fb.png" alt="Facebook"></a>
+              <a href="https://www.facebook.com/drsatula" title="Facebook" target="_blank"><img class="socialMediaTag" src="images/fb.png" alt="Facebook"></a>
             </div>
             <div class="col-xs-1 col-sm-2">
-              <a href="https://www.facebook.com/jason.peterson3" title="Google Plus" target="_blank"><img class="socialMediaTag" src="images/gp.png" alt="Google Plus"></a>
+              <a  title="Google Plus" ><img class="socialMediaTag" src="images/gp.png" alt="Google Plus"></a>
             </div>
             <div class="col-xs-1 col-sm-2">
-              <a href="https://www.facebook.com/jason.peterson3" title="Yelp" target="_blank"><img class="socialMediaTag" src="images/yelp.png" alt="Yelp"></a>
+              <a title="Yelp" ><img class="socialMediaTag" src="images/yelp.png" alt="Yelp"></a>
             </div>
           </div>
         </div>
@@ -449,8 +462,7 @@
           <h4 class="modal-title">Our Mission</h4>
         </div>
         <div class="modal-body">
-          <p>Drs. Satula and Mueller believe in providing affordable dental care for the entire family. From child, to adolescents, to adults and seniors, we offer patients the opportunity to create a beautiful, healthy smile with customized, compassionate
-            dental care in a comfortable atmosphere. We are dedicated to providing you beautiful, long lasting smiles through upholding our practice mission.</p>
+          <p>Drs. Satula and Mueller believe in providing affordable dental care for the entire family. From children, to adolescents, to adults and seniors, we offer patients the opportunity to create a beautiful, healthy smile with customized, compassionate dental care in a comfortable atmosphere. We are dedicated to providing you beautiful, long-lasting smiles through upholding our practice mission.</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -489,8 +501,7 @@
         <div class="modal-body">
           <p>As a practice, we are true believers that preventative care and education are the keys to a lifetime of optimal dental health. That is why we focus on thorough exams – checking the overall health of your teeth and gums, performing oral cancer
             exams, and taking x- rays when necessary.  We also know that routine cleanings, flossing, sealants, and fluoride are all helpful in preventing dental disease.  Not only are we focused on the beauty of your smile, we’re also concerned about
-            your health.  A review of your medical history can help us stay informed of your overall health, any new medications, and any illnesses that may impact your dental health. In addition, at each cleaning appointment our hygienist go into detail
-            to make sure you are properly education to continue good oral habits at home. We are also dedicated to ensuring you understand the condition of your oral health and the treatment plan options available to you for optimal dental health.</p>
+            your health.  A review of your medical history can help us stay informed of your overall health, any new medications, and any illnesses that may impact your dental health. In addition, at each cleaning appointment, our hygienist will go into detail to make sure you are properly educated to continue good oral habits at home.  We are also dedicated to ensuring you understand the condition of your oral health and the treatment plan options available to you for optimal dental health.</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -509,7 +520,7 @@
         </div>
         <div class="modal-body">
           <p>Infection control in our office is also very important to us.  To protect our patients and our staff, we strictly maintain sterilization and cross contamination processes using standards recommended by the American Dental Association (ADA),
-            the Occupational Safety and Health Administration (OSHA), and the Center for Disease Control (CDC).</p>
+            the Occupational Safety and Health Administration (OSHA), and the Centers for Disease Control and Prevention (CDC).</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -529,7 +540,7 @@
         <div class="modal-body">
           <p>As your dental health professionals, we want you to be confident knowing that we are a team of highly trained and skilled clinicians.  We pride ourselves in providing the care you need to keep your smile healthy.  To give you the best possible
             service and results, we are committed to continual education and learning.  We attend dental lectures, meetings, and dental conventions to stay informed of new techniques, the latest products, and the newest equipment that a modern dental
-            office can utilize to provide state-of- the-art dental care.  Also, being members of various professional dental associations helps us to stay up to date of the changes and recommendations for our profession.</p>
+            office can utilize to provide state-of- the-art dental care.  Also, being members of various professional dental associations helps us to stay up to date with the changes and recommendations in our profession.</p>
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
