--- a/retirement.html
+++ b/retirement.html
@@ -37,19 +37,19 @@
             <li><a class="textWhite" href="index.html#section1">About Us</a></li>
             <li><a class="textWhite" href="index.html#section2">Our Team</a></li>
             <li><a class="textWhite" href="index.html#section3">Services Provided</a></li>
-            <li><a class="textWhite" href="index.html#section4">New Patient</a></li>
+            <li><a class="textWhite" href="index.html#section4">New Patients</a></li>
             <li><a class="textWhite" href="#">Dr. Raimann Retirement</a></li>
           </ul>
           <div class="navbar-right hidden-xs">
             <div class="row">
               <div class="col-sm-3">
-                <a href="https://www.facebook.com/jason.peterson3" title="Facebook" target="_blank"><img class="socialMediaTag" src="images/fb.png" alt="Facebook"></a>
+                <a href="https://www.facebook.com/drsatula" title="Facebook" target="_blank"><img class="socialMediaTag" src="images/fb.png" alt="Facebook"></a>
               </div>
               <div class="col-sm-3">
-                <a href="https://www.facebook.com/jason.peterson3" title="Google Plus" target="_blank"><img class="socialMediaTag" src="images/gp.png" alt="Google Plus"></a>
+                <a href="#" title="Google Plus"><img class="socialMediaTag" src="images/gp.png" alt="Google Plus"></a>
               </div>
               <div class="col-sm-3">
-                <a href="https://www.facebook.com/jason.peterson3" title="Yelp" target="_blank"><img class="socialMediaTag" src="images/yelp.png" alt="Yelp"></a>
+                <a href="#" title="Yelp" ><img class="socialMediaTag" src="images/yelp.png" alt="Yelp"></a>
               </div>
             </div>
           </div>
@@ -80,7 +80,7 @@
     </div>
   </div>
 
-  <div id="retirementPhotoSection" class="container-fluid primaryBackground ">
+  <div id="retirementPhotoSection " class="container-fluid primaryBackground ">
     <div class="row">
       <div class="col-sm-4">
         <img id="retirementPhoto" class="img-responsive" src="images/Katie_Tom.jpg" alt="Katie and Tom">
@@ -97,6 +97,8 @@
             <br> My incredible staff of Amy, Kristi, MaryJo, Beth, and Angie will stay on and be there with Dr. Satula to continue to provide you with excellent dental care. Your dental records will continue to be maintained at the office.
             <br>
             <br> Thank you again for your loyalty, confidence and friendship.
+            <br>
+            <br> Sincerely, Dr. Thomas Raiman
           </p>
       </div>
     </div>
@@ -123,13 +125,13 @@
           <br>
           <div class="row">
             <div class="col-xs-1 col-sm-2">
-              <a href="https://www.facebook.com/jason.peterson3" title="Facebook" target="_blank"><img class="socialMediaTag" src="images/fb.png" alt="Facebook"></a>
+              <a href="https://www.facebook.com/drsatula" title="Facebook" target="_blank"><img class="socialMediaTag" src="images/fb.png" alt="Facebook"></a>
             </div>
             <div class="col-xs-1 col-sm-2">
-              <a href="https://www.facebook.com/jason.peterson3" title="Google Plus" target="_blank"><img class="socialMediaTag" src="images/gp.png" alt="Google Plus"></a>
+              <a href="#" title="Google Plus" ><img class="socialMediaTag" src="images/gp.png" alt="Google Plus"></a>
             </div>
             <div class="col-xs-1 col-sm-2">
-              <a href="https://www.facebook.com/jason.peterson3" title="Yelp" target="_blank"><img class="socialMediaTag" src="images/yelp.png" alt="Yelp"></a>
+              <a href="#" title="Yelp" ><img class="socialMediaTag" src="images/yelp.png" alt="Yelp"></a>
             </div>
           </div>
         </div>
